--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="whibut is a place to keep all that you've done"
-    />
-    <link href='./whibut-favicon-64.png' rel='icon' type='image/png'/>
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,600,800&display=swap" rel="stylesheet">
+    <meta name="description" content="whibut is a place to keep all that you've done" />
+    <link href="./whibut-favicon-64.png" rel="icon" type="image/png" />
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,600,800&display=swap" rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
