changed up landing page to include demo log in from front screen and changed heirarchy. Initial design edits, post design audit.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="whibut is a place to keep all that you've done" />
+    <meta name="title" property="og:title" content="WHIBUT" />
+    <meta property="og:type" content="Portfolio" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/49891409232_286ef546d1_b.jpg" />
+
+    <meta name="author" content="Anthony Hill" />
     <link href="./whibut-favicon-64.png" rel="icon" type="image/png" />
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,600,800&display=swap" rel="stylesheet" />
     <!--
